objects/cic_credit__Tradeline__c.object
<CustomObject>
    <fields>
        <fullName>cic_credit__Account_Paid_Date__c</fullName>
        <description>creditLiabilityAccountPaidDate</description>
        <label>Account Paid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cic_credit__Account__c</fullName>
        <description>creditLiabilityAccountIdentifier</description>
        <label>Account</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cic_credit__Business_Type_Details__c</fullName>
        <description>detailCreditBusinessType</description>
        <label>Business Type Details</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cic_credit__Business_Type__c</fullName>
        <description>creditBusinessType</description>
        <label>Business Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cic_credit__Charge_Off_Amount__c</fullName>
        <description>creditLiabilityChargeOffAmount</description>
        <label>Charge Off Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cic_credit__City__c</fullName>
        <description>cityName</description>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cic_credit__Close_Date__c</fullName>
        <description>creditLiabilityAccountClosedDate</description>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cic_credit__Comment_Source__c</fullName>
        <description>creditCommentSourceType</description>
        <label>Comment Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cic_credit__Comment__c</fullName>
        <description>creditCommentText</description>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>cic_credit__Consumer_Dispute__c</fullName>
        <description>creditLiabilityConsumerDisputeIndicator</description>
        <label>Consumer Dispute</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cic_credit__Credit_Limit_Amount__c</fullName>
        <description>creditLiabilityCreditLimitAmount</description>
        <label>Credit Limit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cic_credit__Credit_Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit Report</label>
        <referenceTo>cic_credit__Credit_Report__c</referenceTo>
        <relationshipLabel>Tradelines</relationshipLabel>
        <relationshipName>Tradelines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cic_credit__High_Balance__c</fullName>
        <description>creditLiabilityHighBalanceAmount</description>
        <label>High Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cic_credit__Last_Activity__c</fullName>
        <description>creditLiabilityLastActivityDate</description>
        <label>Last Activity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cic_credit__Loan_Type__c</fullName>
        <label>Loan Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cic_credit__Monthly_Payment_Amount__c</fullName>
        <description>creditLiabilityMonthlyPaymentAmount</description>
        <label>Monthly Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cic_credit__Months_Remaining__c</fullName>
        <description>creditLiabilityMonthsRemainingCount</description>
        <label>Months Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cic_credit__Months_Reviewed__c</fullName>
        <description>creditLiabilityMonthsReviewedCount</description>
        <label>Months Reviewed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cic_credit__Open_Date__c</fullName>
        <description>creditLiabilityAccountOpenedDate</description>
        <label>Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cic_credit__Ownership_Type__c</fullName>
        <description>creditLiabilityAccountOwnershipType</description>
        <label>Ownership Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cic_credit__Past_Due_Amount__c</fullName>
        <description>creditLiabilityPastDueAmount</description>
        <label>Past Due Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cic_credit__Payment_Pattern_Start__c</fullName>
        <description>creditLiabilityPaymentPatternStartDate</description>
        <label>Payment Pattern Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cic_credit__Payment_Pattern__c</fullName>
        <description>creditLiabilityPaymentPatternDataText</description>
        <label>Payment Pattern</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cic_credit__Postal_Code__c</fullName>
        <description>postalCode</description>
        <label>Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cic_credit__Rating_Code__c</fullName>
        <description>creditLiabilityCurrentRatingCode</description>
        <label>Rating Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cic_credit__Rating_Type__c</fullName>
        <description>creditLiabilityCurrentRatingType</description>
        <label>Rating Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cic_credit__Relationship__c</fullName>
        <label>Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Borrower</fullName>
                </value>
                <value>
                    <fullName>Co Borrower</fullName>
                </value>
                <value>
                    <fullName>Joint</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cic_credit__Reported_Date__c</fullName>
        <description>creditLiabilityAccountReportedDate</description>
        <label>Reported Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cic_credit__Sequence_Number__c</fullName>
        <label>Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cic_credit__State__c</fullName>
        <description>stateCode</description>
        <label>State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cic_credit__Status_Type__c</fullName>
        <description>creditLiabilityAccountStatusType</description>
        <label>Status Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cic_credit__Street__c</fullName>
        <description>addressLineText</description>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cic_credit__Term_In_Months__c</fullName>
        <description>creditLiabilityTermsMonthsCount</description>
        <label>Term In Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cic_credit__Terms_Description__c</fullName>
        <description>creditLiabilityTermsDescription</description>
        <label>Terms Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>cic_credit__Terms_Source_Type__c</fullName>
        <description>creditLiabilityTermsSourceType</description>
        <label>Terms Source Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cic_credit__Type__c</fullName>
        <description>creditLiabilityAccountType</description>
        <label>Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cic_credit__Unpaid_Balance_Amount__c</fullName>
        <description>creditLiabilityUnpaidBalanceAmount</description>
        <label>Unpaid Balance Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cic_credit__X30_Days_Late__c</fullName>
        <description>creditLiability30DaysLateCount</description>
        <label>30 Days Late</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cic_credit__X60_Days_Late__c</fullName>
        <description>creditLiability60DaysLateCount</description>
        <label>60 Days Late</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cic_credit__X90_Days_Late__c</fullName>
        <description>creditLiability90DaysLateCount</description>
        <label>90 Days Late</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Tradeline</label>
    <nameField>
        <displayFormat>TL-{00000000}</displayFormat>
        <label>Tradeline Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tradelines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>